# example_multi_mod

./: .gitignore  BUILD.bat  CMakeLists.txt  CMakePresets.json  cpm.json  multi_mod.sln  multi_mod.vcxproj  multi_mod.vcxproj.filters
include/module_A/: A.h
include/module_B/: B.h
src/: A.cpp  B.cpp  CMakeLists.txt
